--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     height: 100px;
     border-radius: 50px;
     border: 5px solid var(--text-color);
-    background: url('../PP.jpg') no-repeat center center/cover;
+    background: url('../pp.jpg') no-repeat center center/cover;
 }
 
 #profilename{
